@@ -1,6 +1,7 @@
 0.5.0
 -----
 1. Add ability to calculate replaygain tags.
+2. Add "Open File Manager" action to folder page context menu.
 
 0.4.0
 -----
